--- a/index.html
+++ b/index.html
@@ -37,30 +37,20 @@
         <div class="grade-projetos">
 
             <div class="card-projeto efeito-cursor">
-                <img class="img-projeto" src="img/chat.jpg" alt="imagem do projeto">
+                <video src="img/Análise de Dados Interativa.mp4" type="video/mp4" controls="" alt="video do projeto"></video>
                 <div class="info-projeto">
-                    <h3>Chat AI</h3>
-                    <p>Chat de Iteligência Artificial, ultilizando tecnologias como: llm; python; streamlit.</p>
-                    <a >Ver Projeto →</a>
+                    <h3>Análise de Dados Interativa</h3>
+                    <p>Aplicação de análise de dados interativa, ultilizando tecnologias como: python; streamlit; pandas.</p>
+                    <a href="https://dashboard-wandersolutions.streamlit.app/" >Ver Projeto →</a>
                 </div>
             </div>
-
-            <div class="card-projeto efeito-cursor">
-                <img class="img-projeto" src="img/modbus.jpg" alt="imagem do projeto">
-                <div class="info-projeto">
-                    <h3>Modbus Client</h3>
-                    <p>Interface de comunição Modbus TCP/IP, ultílizando técnologias como: pymodbus; python; streamlit.</p>
-                    <a >Ver Projeto →</a>
-                </div>
-            </div>
-
+            
             <div class="card-projeto efeito-cursor">
                 <img class="img-projeto" src="img/tempo.jpg" alt="imagem do projeto">
                 <div class="info-projeto">
                     <h3>Previsão do Tempo</h3>
                     <p>Aplicativo para consulta de prvisão do tempo, ultilizando tecnologias como: python; streamlit; OpenWeatherMap.</p>
-                    <a >Ver Projeto →</a>
-                
+                    <a href="https://previsaodotempo-wandersolutions.streamlit.app/">Ver Projeto →</a>
                 </div>
             </div>
         </div>
