--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class="grade-projetos">
 
             <div class="card-projeto efeito-cursor">
-                <video src="img/Análise de Dados Interativa.mp4" type="video/mp4" controls="" alt="video do projeto"></video>
+                <img class="img-projeto" src="img/dashboard.png" alt="imagem do projeto">
                 <div class="info-projeto">
                     <h3>Análise de Dados Interativa</h3>
                     <p>Aplicação de análise de dados interativa, ultilizando tecnologias como: python; streamlit; pandas.</p>
                     <a href="https://dashboard-wandersolutions.streamlit.app/" >Ver Projeto →</a>
                 </div>
             </div>
-            
+
             <div class="card-projeto efeito-cursor">
                 <img class="img-projeto" src="img/tempo.jpg" alt="imagem do projeto">
                 <div class="info-projeto">
