--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
                 </div>
             </div>
 
+             <div class="card-projeto efeito-cursor">
+                <video class="img-projeto" src="img/nike.mp4" type="video/mp4" autoplay="true" loop="true"></video>
+                <div class="info-projeto">
+                    <h3>Site da Nike</h3>
+                    <p>Um site interativo simulando uma pagina de vendas da Nike, ultilizando tecnologias como: HTML; CSS e JavaScript.</p>
+                    <a href="https://dashboard-wandersolutions.streamlit.app/" >Ver Projeto →</a>
+                </div>
+            </div>
+
             <div class="card-projeto efeito-cursor">
                 <img class="img-projeto" src="img/tempo.jpg" alt="imagem do projeto">
                 <div class="info-projeto">
