--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="info-projeto">
                     <h3>Site da Nike</h3>
                     <p>Um site interativo simulando uma pagina de vendas da Nike, ultilizando tecnologias como: HTML; CSS e JavaScript.</p>
-                    <a href="https://dashboard-wandersolutions.streamlit.app/" >Ver Projeto →</a>
+                    <a href="https://wandeson1994.github.io/Site-da-Nike/" >Ver Projeto →</a>
                 </div>
             </div>
 
