--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="card-projeto efeito-cursor">
-                <img class="img-projeto" src="img/tempo.jpg" alt="imagem do projeto">
+                <img class="img-projeto" src="img/tempo.png" alt="imagem do projeto">
                 <div class="info-projeto">
                     <h3>Previsão do Tempo</h3>
                     <p>Aplicativo para consulta de prvisão do tempo, ultilizando tecnologias como: python; streamlit; OpenWeatherMap.</p>
