Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="principal">
         <div>
             <h1>Olá, eu sou <span>Wanderson Magalhães</span>.</h1>
-            <p>Proficional em Automação Industrial e Desenvolvedor, 
+            <p>Profissional em Automação Industrial e Desenvolvedor, 
                 focado em construir experiências digitais e interfaces intuitivas.</p>
             <a href="#projetos" class="botao efeito-cursor">Ver Projetos</a>
         </div>
